image high on mobile fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -343,7 +343,6 @@ button {
   & > img {
     max-width: 100vw;
     max-height: 100vh;
-    height: 100%;
     pointer-events: none;
   }
 }
@@ -440,6 +439,9 @@ button {
   }
   .gallery {
     grid-template-columns: repeat(3, 1fr);
+  }
+  .display-image > img {
+    height: 100%;
   }
 }
 
